money maa images changes

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <div class="container header-container">
             <div class="row">
                 <div class="col-xl-6 col-lg-6 col-12 wow fadeInLeft reveal" data-wow-delay="100ms" style="animation-delay: 100ms;">
-                    <div class="about-bg-one" data-background="assets/img/about/about-1.jpg" style="background-image: url('images/about-1.jpg');">                        
+                    <div class="about-bg-one" data-background="assets/img/about/about-1.jpg" style="background-image: url('images/about-1.png');">                        
                         <div class="about-tag-title">
                             <h4>We Have More Than 8 Years of Experience</h4>
                         </div>
