--- a/mutual-funds.html
+++ b/mutual-funds.html
@@ -200,7 +200,7 @@
             <div class="row mt-90">
                 <div class="col-12">
                     <div class="bread-bg">
-                        <img src="images/service-details_banner.jpg" alt="">
+                        <img src="images/service-details_banner.avif" alt="" style="width: 100%;">
                         <div class="bg-tag">
                             <h2>Mutual Funds</h2>
                         </div>
