--- a/pms-aif.html
+++ b/pms-aif.html
@@ -200,7 +200,7 @@
             <div class="row mt-90">
                 <div class="col-12">
                     <div class="bread-bg">
-                        <img src="images/slide-2.jpg" alt="">
+                        <img src="images/pms1.jpg" alt="" style="width: 100%;">
                         <div class="bg-tag">
                             <h2>PMS</h2>
                         </div>
